@@ -1,3 +1,9 @@
+2008-04-09  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
+
+	* flumotion/component/dvb/dvb.py:
+	Fix up chaining up of configure_pipeline.
+	Fix up naming of second tee element.
+
 2008-04-04  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
 
 	* flumotion/component/dvb/dvb.py:
